--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(250, 250,250);
+    background-color: rgb(26, 188, 156, 0.2);
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .container {
@@ -11,6 +12,8 @@ body {
   .image {
     width: 40%;
     margin-top: 50px;
+    border-radius: 10px;
+    margin-bottom: 3rem;
   }
   
   @media only screen and (max-width: 770px) {
@@ -20,6 +23,7 @@ body {
   
     .image {
       width: 100%;
+      margin-bottom: 1.5rem;
     }
   }
   
